# yui

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md
bin-ykh/: Cargo.toml  README.md
bin-ykh/src/: main.rs
bin-ykh/src/app/: app.rs  err.rs  mod.rs
bin-ykh/tests/: experiments.rs
bin-ykr/: Cargo.toml
bin-ykr/data/: braid.csv  homfly.csv
bin-ykr/results/: 10_1.json  10_10.json  10_100.json  10_101.json  10_102.json  10_103.json  10_104.json  10_105.json  10_106.json  10_107.json  10_108.json  10_109.json  10_11.json  10_110.json  10_111.json  10_112.json  10_113.json  10_114.json  10_115.json  10_116.json  10_117.json  10_118.json  10_119.json  10_12.json  10_120.json  10_121.json  10_122.json  10_123.json  10_124.json  10_125.json  10_126.json  10_127.json  10_128.json  10_129.json  10_13.json  10_130.json  10_131.json  10_132.json  10_133.json  10_134.json  (+761 more)
bin-ykr/src/: main.rs
bin-ykr/src/app/: app.rs  calc.rs  mod.rs  utils.rs
bin-ykr/tests/: check_homfly.rs  k10.rs  k11a.rs  k11n.rs  k3-7.rs  k8.rs  k9.rs
bin-ykr/tests/common/: mod.rs
lib-core/: Cargo.toml
lib-core/src/: lib.rs
lib-core/src/abst/: add_grp.rs  add_mon.rs  ring.rs
lib-core/src/algo/: mod.rs
lib-core/src/ext/: mod.rs  range.rs
lib-core/src/misc/: bitseq.rs  mod.rs
lib-core/src/traits/: clone_and.rs  digits.rs  mod.rs  tex.rs
lib-core/src/types/: mod.rs  sign.rs
lib-core/src/util/: macros.rs
lib-homology/: Cargo.toml
lib-homology/src/: lib.rs
lib-homology/src/abst/: complex.rs  homology.rs  mod.rs  summand.rs
lib-homology/src/conc/: chain_map.rs  complex.rs  homology.rs  summand.rs
lib-homology/src/generic/: complex.rs  gen.rs  summand.rs
lib-homology/src/grid/: grid.rs  grid_deg.rs  mod.rs
lib-homology/src/misc/: format.rs
lib-homology/src/utils/: chain_reducer.rs  homology_calc.rs  matrix.rs
lib-link/: Cargo.toml
lib-link/resources/braid/: 10_10.json  10_100.json  10_101.json  10_106.json  10_107.json  10_108.json  10_11.json  10_116.json  10_119.json  10_123.json  10_125.json  10_13.json  10_130.json  10_131.json  10_133.json  10_138.json  10_141.json  10_145.json  10_146.json  10_147.json  10_148.json  10_15.json  10_154.json  10_156.json  10_158.json  10_159.json  10_16.json  10_160.json  10_163.json  10_18.json  10_2.json  10_23.json  10_24.json  10_25.json  10_28.json  10_29.json  10_30.json  10_31.json  10_32.json  10_33.json  (+319 more)
lib-link/resources/links/: README.md
lib-link/src/: braid.rs  inv_link.rs
lib-link/src/link/: crossing.rs  link.rs  mod.rs  node.rs  path.rs
lib-link/src/util/: graph.rs  jones.rs  mod.rs
lib-matrix/: Cargo.toml
lib-matrix/src/dense/: lll.rs  mat.rs  mod.rs  snf.rs
lib-matrix/src/sparse/: decomp.rs  pivot.rs  schur.rs  sp_mat.rs  sp_vec.rs  trans.rs  triang.rs
workspace/homology/: Cargo.toml
workspace/homology/src/: base.rs  complex.rs  deg.rs  fmt.rs  free.rs  graded.rs  grid.rs  homology.rs  homology_calc.rs  lib.rs  r_mod_str.rs  reduced.rs  reducer.rs  trans.rs  x_complex.rs  x_homology.rs  x_mod_str.rs
workspace/khovanov/: Cargo.toml
workspace/khovanov/src/: algebra.rs  complex.rs  cube.rs  cycle.rs  homology.rs  lib.rs
workspace/link/: Cargo.toml
workspace/link/src/: jones.rs  lib.rs
workspace/matrix/: Cargo.toml
workspace/matrix/src/: lib.rs  lll.rs  pivot.rs  schur.rs  sp_vec.rs  triang.rs
workspace/types/ff/: Cargo.toml
workspace/types/lin_comb/: Cargo.toml
workspace/types/polynomial/: Cargo.toml
workspace/types/quad_int/: Cargo.toml
workspace/utils/: Cargo.toml
workspace/utils/src/: bitseq.rs  display.rs  format.rs  lib.rs  macros.rs  top_sort.rs
yui/: Cargo.toml
yui-homology/: Cargo.toml
yui-homology/src/: complex.rs  config.rs  grid.rs  grid_deg.rs  homology.rs  lib.rs  r_mod_str.rs  x_complex.rs  x_homology.rs  x_mod_str.rs
yui-homology/src/abst/: complex.rs  homology.rs  summand.rs
yui-homology/src/conc/: chain_map.rs  complex.rs  homology.rs  mod.rs  summand.rs
yui-homology/src/cpx/: complex.rs  homology.rs  mod.rs  r_mod_str.rs
yui-homology/src/generic/: complex.rs  gen.rs  mod.rs  summand.rs
yui-homology/src/grid/: grid.rs  grid_deg.rs
yui-homology/src/misc/: format.rs
yui-homology/src/simple/: mod.rs  s_complex.rs
yui-homology/src/utils/: chain_reducer.rs  homology_calc.rs  matrix.rs  mod.rs  samples.rs
yui-homology/src/x/: mod.rs  simple.rs  x_complex.rs  x_homology.rs  x_mod_str.rs
yui-khovanov/: Cargo.toml
yui-khovanov/src/: lib.rs  misc.rs
yui-khovanov/src/ext/: link.rs
yui-khovanov/src/kh/: alg.rs  complex.rs  gen.rs  homology.rs  mod.rs  sigma.rs  ss.rs
yui-khovanov/src/khi/: complex.rs  gen.rs  homology.rs  ssi.rs
yui-kr/: Cargo.toml
yui-kr/src/: kr.rs  lib.rs  result.rs
yui-kr/src/internal/: base.rs  data.rs  hor_cpx.rs  hor_cube.rs  hor_excl.rs  hor_homol.rs  mod.rs  tot_cpx.rs  tot_cpx_red.rs  tot_cube.rs  tot_homol.rs
yui-link/: Cargo.toml
yui-link/resources/braid/: 10_1.json  10_10.json  10_102.json  10_103.json  10_104.json  10_105.json  10_107.json  10_109.json  10_11.json  10_110.json  10_111.json  10_112.json  10_113.json  10_114.json  10_115.json  10_117.json  10_118.json  10_119.json  10_12.json  10_120.json  10_121.json  10_122.json  10_123.json  10_124.json  10_125.json  10_126.json  10_127.json  10_128.json  10_129.json  10_13.json  10_131.json  10_132.json  10_133.json  10_134.json  10_135.json  10_136.json  10_137.json  10_139.json  10_14.json  10_140.json  (+475 more)
yui-link/src/: braid.rs  inv_link.rs  jones.rs  lib.rs
yui-link/src/link/: comp.rs  crossing.rs  link.rs  mod.rs  path.rs
yui-link/src/util/: graph.rs  jones.rs
yui-matrix/: Cargo.toml
yui-matrix/src/: base.rs  lib.rs
yui-matrix/src/dense/: _mat.rs  lll.rs  mat.rs  mod.rs  snf.rs
yui-matrix/src/sparse/: _sp_mat.rs  _sp_vec.rs  decomp.rs  mod.rs  pivot.rs  schur.rs  sp_mat.rs  sp_vec.rs  trans.rs  triang.rs  util.rs
yui-types/ff/: Cargo.toml
yui-types/ff/src/: lib.rs
yui-types/polynomial/: Cargo.toml
yui-types/polynomial/src/: bivar.rs  multivar.rs  (+2 more)
yui-utils/: Cargo.toml
yui-utils/src/: bitseq.rs
yui/src/: lib.rs
(+359 files in other folders)
