[workspace]
members = [ 
    "bin-ykh",
    "lib-core",
    "lib-matrix",
    "lib-homology",
    "lib-link",
    "lib-kh"
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Taketo Sano <taketo1024@gmail.com>"]
description = "YUI"
license = "MIT"
edition = "2021"

[profile.release]
overflow-checks = true
# debug = true