[workspace]
members = [ 
    "bin-ykh",
    "lib-core",
    "lib-matrix",
    "lib-homology",
    "lib-link",
    "lib-kh"
]
resolver = "2"

[workspace.package]
authors = ["Taketo Sano <taketo1024@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/taketo1024/yui"

[profile.release]
overflow-checks = true
# debug = true