[package]
name = "ykh"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["poly"]
all = ["poly", "qint"]
poly = []
qint = []
i128 = []
bigint = []
# old = ["yui-kh/old"]

[dependencies]
clap = { version = "4.5.35", features = ["derive", "cargo"] }
csv = "1.3.1"
derive_more = { version = "1.0.0", features = ["display", "debug"] }
log = "0.4.27"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regex = "1.11.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
cfg-if = "1.0.0"
itertools = "0.13.0"
yui  =         { path = "../yui", features = ["tex"] }
yui-link =     { path = "../yui-link" }
yui-matrix =   { path = "../yui-matrix" }
yui-homology = { path = "../yui-homology", features = ["tex"] }
yui-kh = { path = "../yui-khovanov" }
