[package]
name = "ykh"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["poly"]
all = ["poly", "qint"]
poly = []
qint = []
i128 = []
bigint = []
# old = ["yui-kh/old"]

[dependencies]
clap = { version = "4.5.35", features = ["derive", "cargo"] }
csv = "1.3.1"
derive_more = { version = "2.0.1", features = ["display", "debug"] }
log = "0.4.27"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regex = "1.11.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
cfg-if = "1.0.0"
itertools = "0.14.0"
yui-core  =    { path = "../lib-core", features = ["tex"] }
yui-link =     { path = "../lib-link" }
yui-matrix =   { path = "../lib-matrix" }
yui-homology = { path = "../lib-homology", features = ["tex"] }
yui-kh = { path = "../lib-kh" }
