[package]
name = "ykr"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
test_all = []

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
itertools = "0.13.0"
derive_more = { version = "1.0.0", features = ["display", "debug"] }
log = "0.4.22"
clap = { version = "4.5.17", features = ["derive", "cargo"] }
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
regex = "1.10.6"
cfg-if = "1.0.0"
yui  =         { path = "../yui", features = ["tex"] }
yui-link =     { path = "../yui-link" }
yui-matrix =   { path = "../yui-matrix" }
yui-homology = { path = "../yui-homology" }
yui-kr =       { path = "../yui-kr" }