[package]
name = "yui-homology"
description = ""
version = "0.4.0"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace  = true

[features]
default = ["multithread"]
multithread = ["rayon"]
serde = ["dep:serde", "dep:serde_json", "ahash/serde"]
tex = ["yui-core/tex"]

[dependencies]
ahash = "0.8.11"
bimap = "0.6.3"
cartesian = "0.3.0"
cfg-if = "1.0.0"
delegate = "0.13.3"
derive_more = { version = "2.0.1", features = ["display", "debug", "add"] }
grouping_by = "0.2.2"
itertools = "0.14.0"
log = "0.4.27"
num-traits = "0.2.19"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
sprs = "0.11.3"
yui-core = { version = "0.4.0", path = "../lib-core" }
yui-matrix = { version = "0.4.0", path = "../lib-matrix" }
