[package]
name = "yui-link"
description = "Knots & Links Library for YUI"
version = "0.4.0"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace  = true

[dependencies]
auto-impl-ops = "0.2.1"
delegate = "0.13.3"
derive_more = { version = "2.0.1", features = ["display", "debug"] }
itertools = "0.14.0"
num-integer = "0.1.46"
num-traits = "0.2.19"
petgraph = "0.8.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
yui-core = { version = "0.4.0", path = "../lib-core" }
