[package]
name = "yui-matrix"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["multithread"]
multithread = ["rayon"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
ahash = "0.8.11"
auto-impl-ops = "0.2.1"
cartesian = "0.3.0"
cfg-if = "1.0.0"
delegate = "0.13.3"
derive_more = { version = "2.0.1", features = ["display", "debug"] }
either = "1.15.0"
itertools = "0.14.0"
log = "0.4.27"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
nalgebra-sparse = { version = "0.10.0", features = ["serde-serialize"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.0"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
sprs = "0.11.3"
thread_local = "1.1.8"
yui-core = { path = "../lib-core" }
