[package]
name = "yui-homology"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["multithread"]
multithread = ["rayon"]
serde = ["dep:serde", "dep:serde_json", "ahash/serde"]

[dependencies]
ahash = "0.8.11"
bimap = "0.6.3"
cartesian = "0.2.1"
cfg-if = "1.0.0"
delegate = "0.13.0"
derive_more = "0.99.18"
grouping_by = "0.2.2"
itertools = "0.13.0"
log = "0.4.22"
num-traits = "0.2.19"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.210", optional = true }
serde_json = { version = "1.0.128", optional = true }
sprs = "0.11.1"
yui = { path = "../yui" }
yui-matrix = { path = "../yui-matrix" }
