[package]
name = "yui-kh"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
old = []

[dependencies]
auto-impl-ops = "0.2.1"
cartesian = "0.2.1"
delegate = "0.13.0"
derive_more = { version = "1.0.0", features = ["display", "debug"] }
grouping_by = "0.2.2"
indexmap = { version = "2.5.0", features = ["serde"] }
log = "0.4.22"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regex = "1.10.6"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
cfg-if = "1.0.0"
itertools = "0.13.0"
ahash = "0.8.11"
rayon = "1.10.0"
yui  =         { path = "../yui" }
yui-link =     { path = "../yui-link" }
yui-matrix =   { path = "../yui-matrix" }
yui-homology = { path = "../yui-homology" }