[package]
name = "yui-kr"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["multithread"]
multithread = ["rayon"]

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
itertools = "0.13.0"
petgraph = "0.6.5"
derive_more = { version = "1.0.0", features = ["display", "debug"] }
cartesian = "0.2.1"
delegate = "0.13.0"
num-integer = "0.1.46"
rayon = { version = "1.10.0", optional = true }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
regex = "1.10.6"
cfg-if = "1.0.0"
yui  =         { path = "../yui" }
yui-link =     { path = "../yui-link" }
yui-matrix =   { path = "../yui-matrix" }
yui-homology = { path = "../yui-homology" }