[package]
name = "yui-link"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
auto-impl-ops = "0.2.1"
delegate = "0.12.0"
derive_more = "0.99.17"
itertools = "0.12.1"
num-traits = "0.2.18"
petgraph = "0.6.4"
regex = "1.10.3"
serde = "1.0.197"
serde_json = "1.0.114"

yui = { path = "../yui" }
