[package]
name = "yui-link"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
auto-impl-ops = "0.2.1"
delegate = "0.12.0"
derive_more = "0.99.18"
itertools = "0.12.1"
num-traits = "0.2.19"
petgraph = "0.6.5"
regex = "1.10.6"
serde = "1.0.210"
serde_json = "1.0.128"

yui = { path = "../yui" }
