[package]
name = "yui-link"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
auto-impl-ops = "0.2.1"
delegate = "0.13.0"
derive_more = { version = "1.0.0", features = ["display", "debug"] }
itertools = "0.13.0"
num-traits = "0.2.19"
petgraph = "0.6.5"
regex = "1.10.6"
serde = "1.0.210"
serde_json = "1.0.128"

yui = { path = "../yui" }
