[package]
name = "yui-matrix"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
ahash = "0.8.6"
auto-impl-ops = "0.2.1"
cartesian = "0.2.1"
delegate = "0.10.0"
derive_more = "0.99.17"
either = "1.9.0"
itertools = "0.11.0"
log = "0.4.20"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
nalgebra-sparse = { version = "0.9.0", features = ["serde-serialize"] }
num-bigint = "0.4.4"
num-traits = "0.2.16"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
sprs = "0.11.1"
# sprs = { git = "https://github.com/sparsemat/sprs", branch = "master" }
thread_local = "1.1.7"

yui = { path = "../yui" }
