[package]
name = "yui-matrix"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["multithread"]
multithread = ["rayon"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
ahash = "0.8.11"
auto-impl-ops = "0.2.1"
cartesian = "0.2.1"
cfg-if = "1.0.0"
delegate = "0.12.0"
derive_more = "0.99.17"
either = "1.10.0"
itertools = "0.12.1"
log = "0.4.21"
nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
nalgebra-sparse = { version = "0.9.0", features = ["serde-serialize"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
rand = "0.8.5"
rayon = { version = "1.9.0", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }
sprs = "0.11.1"
thread_local = "1.1.8"

yui = { path = "../yui" }
