[package]
name = "yui-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_reverse = "0.1.8"
derive_more = "0.99.17"
itertools = "0.11.0"
num-traits = "0.2.16"
prettytable = "0.10.0"

yui-core = { path = "../yui/"}
