[package]
name = "yui"
description = ""

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_repr", "dep:serde_with"]

[dependencies]
ahash = { version = "0.8.6", features = ["serde"] }
auto-impl-ops = "0.2.1"
bimap = { version = "0.6.3", features = ["serde"] }
delegate = "0.10.0"
derive_more = "0.99.17"
dinglebit_combinatorics = "1.1.0"
is-even = "1.0.0"
itertools = "0.11.0"
num-bigint = "0.4.4"
num-integer = { version = "0.1.45", features = ["i128"] }
num-traits = "0.2.16"
prettytable = "0.10.0"
regex = "1.9.6"
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
serde_repr = { version = "0.1.17", optional = true }
serde_with = {version = "3.4.0", optional = true } 
