[package]
name = "yui-homology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
delegate = "0.10.0"
derive_more = "0.99.17"
grouping_by = "0.2.2"
itertools = "0.11.0"
log = "0.4.20"
num-traits = "0.2.16"
sprs = "0.11.1"
# sprs = { git = "https://github.com/sparsemat/sprs", branch = "master" }
yui-core = { version = "0.1.0", path = "../core" }
yui-lin-comb = { version = "0.1.0", path = "../types/lin_comb" }
yui-matrix = { version = "0.1.0", path = "../matrix" }
yui-utils = { version = "0.1.0", path = "../utils" }
