[package]
name = "yui-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
num-traits = "0.2.15"
serde = "1.0.152"
serde_json = "1.0.93"
yui-core = { version = "0.1.0", path = "../core" }
yui-polynomial = { version = "0.1.0", path = "../types/polynomial" }
