[package]
name = "yui-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
itertools = "0.10.5"
num-traits = "0.2.15"
prettytable = "0.10.0"
yui-core = { path = "../core/"}
