[package]
name = "yui-ff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-impl-ops = "0.2.1"
derive_more = "0.99.17"
num-traits = "0.2.16"
yui-core  = { version = "0.1.0", path = "../../yui" }
yui-utils = { version = "0.1.0", path = "../../yui-utils" }
