[package]
name = "yui-polynomial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
auto-impl-ops = "0.2.1"
itertools = "0.11.0"
num-traits = "0.2.16"
regex = "1.9.6"
yui-core = { version = "0.1.0", path = "../../core" }
yui-lin-comb = { version = "0.1.0", path = "../lin_comb" }
yui-ratio = { version = "0.1.0", path = "../ratio" }
yui-utils = { version = "0.1.0", path = "../../utils" }
