[package]
name = "yui-quad-int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-impl-ops = "0.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
regex = "1.8.1"
yui-core = { version = "0.1.0", path = "../../core" }
